Remove LinkedList usages for Error prone warning: "JdkObsolete"
Bug: 40661145
Change-Id: I03425b6e9133966c433e78e8c784fe8344f2c4bc
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6956033
Reviewed-by: Henrique Nakashima <hnakashima@chromium.org>
Commit-Queue: Andrew Grieve <agrieve@chromium.org>
Owners-Override: Andrew Grieve <agrieve@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1516318}